[commit_logger] Require specific configuration file & command to generate sample [commit_logger] Allow usage for multiple networks at the same time [commit_logger] Update README

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__
 
 # Commit logger specific ignores
 commit_logger/data
+commit_logger/network_information.txt
 
 # Mini explorer specific ignores
 mini_explorer/data
